# LPM-MAC

./: .gitignore  .test_k.txt.swp  CMakeLists.txt  LICENSE  README.md
benchmark/: README.md
benchmark/AM_Ti64/: G5v_XZ_128.tif  G5v_XZ_128_new.tif  G6a_XZ_128.tif  G6a_XZ_128_new.tif  Y6a_XZ_128.tif  Y6a_XZ_128_new.tif  Y6v_XZ_128_new.tif  amga6__rec00001201_yz_select280_erode+dilate.tif  generate_dump.ipynb  test.tif
benchmark/Atomsk/: aluminium.xsf  final_test.cfg  mkl_pardiso_private.mod  updateNeighbors.F90  update_nb
benchmark/BCC_Hailong/: bcc  bcc_model  create_BCC_configuration.F90  elaspoly_afem_bcc2_reduced.F90  mkl_pardiso.mod  mkl_pardiso_private.mod
benchmark/FCC_Hailong/: fcc_single_iso  mkl_pardiso_private.mod
benchmark/SC_Hailong/: sc_model
benchmark/Vonoroi/: 01conn.txt  01ori.txt  04vertex_0.txt  3Dori.txt  3Dseeds.txt  Vertex.txt  (+4 more)
examples/: ex0_elasticity_3d.c  ex1_elasticity_3d.cpp  ex1_isoelasticity_2d_hex.cpp  ex1_isoelasticity_3d_sc.cpp  ex1_stress_strain_J2_plasticity.c  ex2_3point_bending_sq_brittle.c  ex2_polycrystal_3d_bcc.cpp  ex3_shear_hex_brittle.c  ex3_singlecrystal_3d_fcc.cpp  ex4_isoelasticity_2d_crack.cpp  ex4_isoelasticity_2d_crack_shear.cpp  ex4_isoelasticity_2d_crack_shear_bond.cpp  ex4_isoelasticity_2d_crack_shear_sq.cpp  ex4_isoelasticity_2d_crack_shear_sq_bond.cpp  ex4_nonlocal_damage_CT_sc_ductile.c  ex5_Ti64_2d_fatigue_gage.cpp  ex5_crystalplasticity_FCC_Al_tension.c  ex5_isoelasticity_2d_CT_fatigue.cpp  ex5_isoelasticity_2d_fatigue.cpp  ex5_isoelasticity_2d_fatigue_gage.cpp  ex5_isoelasticity_3d_fatigue.cpp  ex6_Ti64_2d_fatigue_crack_G6a.cpp  ex6_Ti64_2d_fatigue_crack_calib.cpp  ex6_isoelasticity_2d_CT_fatigue.cpp  ex6_isoelasticity_2d_CT_fatigue_calib.cpp  ex7_convergence_beam.cpp  position.dump
geometry/: README.md  create_CT_configuration.cpp  geo1_CT_configuration.cpp  geo2_dogbone_config2d.cpp  geo2_dogbone_config3d.cpp  geo2_dogbone_configuration.cpp  test.dump
include/: assembly.h  bond.h  bond_brittle_fatigue_wim.h  bond_elastic.h  bond_elastic_planestress.h  boundary.h  constitutive.h  data_handler.h  derivative.h  elastic_bond.h  elastic_planestress_bond.h  initialization.h  load_step.h  load_step_fatigue.h  lpm.h  lpm_problem.h  lpm_stiffness.h  mkl_solver.h  neighbor.h  particle.h  particle_elastic.h  particle_elastic_damage.h  particle_fatigue_hcf.h  particle_j2plasticity.h  problem.h  solution.h  solver.h  solver_fatigue.h  solver_static.h  solver_static_nodamage.h  stiffness.h  unit_cell.h  utilities.h
loading/: generate_constant_loading.ipynb
src/: bond.cpp  boundary.cpp  constitutive.cpp  data_handler.cpp  initialization.cpp  lpmcpp.cpp  mkl_solver.cpp  neighbor.cpp  particle.cpp  problem.cpp  solver.cpp  stiffness.cpp  unit_cell.cpp  utilities.cpp
(+42 files in other folders)
